<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:background="@color/white"
    >

    <View
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:background="@color/teal_200"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_how_much_passenger"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginTop="30dp"
        android:textSize="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_passenger_desc"
        android:textSize="10dp"
        />

    <TextView
        android:id="@+id/totalPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_value"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger"
        android:textSize="15dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_value"
            />
    <SeekBar
        android:id="@+id/passengersSeekBar"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:thumb="@drawable/thumb"
        android:thumbTint="@color/blue"
        android:max="9"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:background="@drawable/button"
            android:backgroundTint="@color/darker_white"
            android:layout_weight="6"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:id="@+id/selectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:backgroundTint="@color/blue"
            android:layout_weight="6"
            android:layout_marginHorizontal="5dp"
            />
    </LinearLayout>
</LinearLayout>