<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.RetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="10dp"
            app:contentPaddingBottom="50dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/alfamart"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alfamart"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darker_white"
                    android:layout_marginVertical="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retail_tutorial_no_1"
                    android:textStyle="bold"
                    android:layout_marginVertical="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retail_tutorial_no_2"
                    android:textStyle="bold"
                    android:layout_marginVertical="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retail_tutorial_no_3"
                    android:textStyle="bold"
                    android:layout_marginVertical="5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="20dp"
                    android:weightSum="10"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fake_price"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/blue"
                        android:layout_weight="7"
                        android:gravity="right"
                        />
                    <ImageButton
                        android:id="@+id/qrBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/qrcode_icon"
                        android:layout_weight="5"
                        android:backgroundTint="@color/white"
                        android:layout_gravity="right"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retail_tutorial_no_4"
                    android:textStyle="bold"
                    android:layout_marginVertical="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retail_tutorial_no_5"
                    android:textStyle="bold"
                    android:layout_marginVertical="5dp"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verifiy_payment"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:enabled="false"
            />
    </LinearLayout>

</ScrollView>