<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PickDateActivity"
    android:padding="20dp"
    >


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/white"
            android:src="@drawable/back_icon"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/departure_date"
            android:textColor="@color/darker_grey"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/legend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/best_price"
            android:textSize="15dp"
            android:drawableLeft="@drawable/circle"
            android:drawableTint="@color/yellow"
            android:drawablePadding="5dp"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/most_booked"
            android:textSize="15dp"
            android:drawableLeft="@drawable/circle"
            android:drawableTint="@color/red"
            android:drawablePadding="5dp"
            android:layout_marginHorizontal="10dp"
            />


    </LinearLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:calendarTextColor="@color/blue"
        android:theme="@style/DatePicker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_weight="5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:drawablePadding="5dp"
                android:text="@string/departure"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:drawablePadding="5dp"
                android:text="@string/date"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/selectDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/select_date"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>