<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.CardFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:contentPadding="20dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/card_number"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:padding="10dp"
                android:autofillHints="creditCardNumber"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/cc_visa"
                    android:drawablePadding="20dp"
                    android:hint="@string/card_number_hint"
                    android:textColorHint="@color/darker_white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/valid_until"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:textColorHint="@color/darker_white"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/monthInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/month"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:textColorHint="@color/darker_white"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/yearInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/card_holder"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:textColorHint="@color/darker_white"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardHolderInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surename"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vcc"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:textColorHint="@color/darker_white"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vccInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surename"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/last_3_digits_desc"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/verifyBtn"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verifiy_payment"
        android:background="@drawable/button"
        android:backgroundTint="@color/darker_white"
        android:textColor="@color/grey"
        android:enabled="false"
        />
    </LinearLayout>
</ScrollView>